--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -3,9 +3,65 @@
 {% block title %}Jobs{% endblock %}
 
 {% block app_content %}
+<div class="container pt-5 pb-5">
+  <h1>Latest jobs:</h1>
 
-  <h1>Jobs</h1>
+  <div class="container pt-3 pl-0 pr-0">
+{% for j in jobs %}
+    <div class="card container">
+      <div class="card-body">
+        <h4 class="card-title pb-2">
+          <a class="text-dark" target="_blank" href="http://www.itviec.com{{j.url}}">{{j.title}} - {{j.id}}</a>
+        </h4>
+        <h5 class="card-subtitle pb-4">
+          <a class="text-secondary" target="_blank" href="http://www.itviec.com{{j.employer_url}}">{{j.employer}}</a>
+        </h5>
 
-  <img src="/img/job_postings.png">
+        <p class="card-text">{{j.desc}}</p>
 
+<!--
+        <p class="card-text">
+-->
+          <div class="row pb-3">
+            <div class="col-sm-2">Salary:</div>
+            <div class="col-sm">{{j.salary}}</div>
+          </div>
+          <div class="row">
+            <div class="col-sm-2">Location:</div>
+            <div class="col-sm">
+              <ul class="list-inline">
+                <li class="list-inline-item">
+                  <div class="btn btn-outline-dark btn-sm disabled">{{j.address[0]}}</div>
+                </li>
+                <li class="list-inline-item">
+                  <div class="btn btn-outline-dark btn-sm disabled">{{j.address[1]}}</div>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-2">Tags:</div>
+            <div class="col-sm">
+              <ul class="list-inline">
+                <li class="list-inline-item">
+                  <div class="btn btn-outline-dark btn-sm disabled">{{j.tags[0]}}</div>
+                </li>
+                <li class="list-inline-item">
+                  <div class="btn btn-outline-dark btn-sm disabled">{{j.tags[1]}}</div>
+                </li>
+                <li class="list-inline-item">
+                  <div class="btn btn-outline-dark btn-sm disabled">{{j.tags[2]}}</div>
+                </li>
+              </ul>
+            </div>
+          </div>
+<!--
+        </p>
+-->
+      </div>
+    </div>
+{% endfor %}
+  </div>
+
+</div>
 {% endblock %}
