--- a/itviec/templates/navbar.html
+++ b/itviec/templates/navbar.html
@@ -6,7 +6,16 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="/companies" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Companies
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/companies/all">All</a>
+          <a class="dropdown-item" href="/companies/top">Top</a>
+        </div>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/jobs">Jobs<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
