--- a/itviec/templates/about.html
+++ b/itviec/templates/about.html
@@ -23,7 +23,7 @@
 {% block head %}
 <style>
 body {
-    background: url("/img/desk.png") no-repeat center center fixed;
+    background: url("{{url_for('static', filename='img/desk.png')}}") no-repeat center center fixed;
     background-size: cover;
 }
 </style>
