--- a/itviec/templates/base.html
+++ b/itviec/templates/base.html
@@ -30,5 +30,5 @@
 
 {% block styles %}
 {{super()}}
-<link rel="stylesheet" href="/css/footer.css">
+<link rel="stylesheet" href="{{url_for('static', filename='css/footer.css')}}">
 {% endblock %}
