--- a/itviec/templates/navbar.html
+++ b/itviec/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"><img alt="itviec" src="/img/logo_itviec.png" width="94" height="35"></a>
+  <a class="navbar-brand" href="/"><img alt="itviec" src="{{url_for('static', filename='img/logo_itviec.png')}}" width="94" height="35"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
