--- a/itviec/templates/base.html
+++ b/itviec/templates/base.html
@@ -32,3 +32,8 @@
 {{super()}}
 <link rel="stylesheet" href="{{url_for('static', filename='css/footer.css')}}">
 {% endblock %}
+
+{% block head %}
+{{super()}}
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+{% endblock %}
