Add SQLAlchemy in software used

--- a/itviec/templates/about.html
+++ b/itviec/templates/about.html
@@ -12,6 +12,7 @@
         <li>Flask</li>
         <li>BeautifulSoup</li>
         <li>SQLite</li>
+        <li>SQLAlchemy</li>
         <li>Bootstrap</li>
         <li>...</li>
     </ul>
