Fix locations url in navbar template

--- a/itviec/templates/navbar.html
+++ b/itviec/templates/navbar.html
@@ -23,11 +23,10 @@
           Locations
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/locations/hcm">Ho Chi Minh</a>
-          <a class="dropdown-item" href="/locations/hanoi">Ha Noi</a>
-          <a class="dropdown-item" href="/locations/danang">Da Nang</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/locations/other">Other</a>
+          <a class="dropdown-item" href="/jobs/hcm">Ho Chi Minh</a>
+          <a class="dropdown-item" href="/jobs/hanoi">Ha Noi</a>
+          <a class="dropdown-item" href="/jobs/danang">Da Nang</a>
+          <a class="dropdown-item" href="/jobs/other">Others</a>
         </div>
       </li>
       <li class="nav-item">
