--- a/itviec/templates/locations.html
+++ b/itviec/templates/locations.html
@@ -2,28 +2,26 @@
 
 {% block app_content %}
 <div class="container pt-3 pb-4">
-  <h1 class="pb-3">Tags</h1>
+  <h1 class="pb-3">Locations</h1>
 
-  <div class="card" style="width: 20rem;">
-    <h5 class="card-header">Top tags</h5>
+  <div class="card" style="width: 18rem;">
+    <h5 class="card-header">Location tags</h5>
     <div class="card-body">
       <!-- <h5 class="card-title">Top tags</h5> -->
       <table class="table table-striped table-sm card-text" style="width:auto">
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">Tag</th>
-            <th scope="col">Count</th>
-            <th scope="col">%</th>
+            <th scope="col">Location</th>
+            <!-- <th scope="col">Count</th> -->
           </tr>
         </thead>
         <tbody>
-        {% for row in tags %}
+        {% for loc in locations %}
           <tr>
             <th scope="row">{{loop.index}}</th>
-            <td>{{row[0]}}</td>
-            <td>{{row[1]}}</td>
-            <td>{{row[2]}}</td>
+            <td>{{loc}}</td>
+            <!-- <td>{{loc}}</td> -->
           </tr>
         {% endfor %}
         </tbody>
