Fix css margin style

--- a/itviec/static/css/main.css
+++ b/itviec/static/css/main.css
@@ -3,10 +3,7 @@ body {
 }
 
 section {
-  margin-left: 8px;
-  margin-right: 8px;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin: 8px 8px 8px 8px;
 }
 
 footer {
